added MochiView Files as well as current result set

--- a/01-gene-expression/analysis/code_figure_2a.html
+++ b/01-gene-expression/analysis/code_figure_2a.html
@@ -225,8 +225,7 @@ $(document).ready(function () {
 ##  [9] &quot;CAGL0G09977g&quot; &quot;CAGL0H02739g&quot; &quot;CAGL0I01166g&quot; &quot;CAGL0J09680g&quot;
 ## [13] &quot;CAGL0K00803g&quot; &quot;CAGL0K00847g&quot; &quot;CAGL0K05357g&quot; &quot;CAGL0K06259g&quot;
 ## [17] &quot;CAGL0K08184g&quot; &quot;CAGL0K10868g&quot; &quot;CAGL0L04664g&quot; &quot;CAGL0M11704g&quot;</code></pre>
-<pre><code>## [1] CAGL0B02277g CAGL0F00407g CAGL0G01540g CAGL0J09680g CAGL0K05357g
-## 20 Levels: CAGL0A02530g CAGL0B02277g CAGL0C01705g ... CAGL0M11704g</code></pre>
+<pre><code>## [1] 5</code></pre>
 </div>
 </div>
 
